fix(overflow): fix overflow with TrackJS logo
image size was overflowing on smaller resolutions (under 500px)
change image size to maximum 100% (maximum screen width)

--- a/css/styles.css
+++ b/css/styles.css
@@ -281,6 +281,10 @@ a {
     overflow: hidden;
 }
 
+.img-40 {
+    width: 100%;
+}
+
 .img-100 {
     display: block;
     margin-left: auto;
